fix wrong padding

--- a/curricula/static/curricula/style.css
+++ b/curricula/static/curricula/style.css
@@ -331,8 +331,8 @@ img.grayed-out-img {
 #checkButton{
     border-radius: 12rem;
     border: .2rem solid #1caff6;
-    padding-left: 15;
-    padding-right: 15;
+    padding-left: 15px;
+    padding-right: 15px;
     padding-top: 9px;
     padding-bottom: 9px;
     background: rgba(255, 255, 255, 0);
@@ -474,8 +474,8 @@ img.grayed-out-img {
 .hover-button{
     border-radius: 12rem;
     border: .2rem solid #1caff6;
-    padding-left: 15;
-    padding-right: 15;
+    padding-left: 15px;
+    padding-right: 15px;
     padding-top: 5px;
     padding-bottom: 5px;
     background: rgba(255, 255, 255, 0);
@@ -497,8 +497,8 @@ img.grayed-out-img {
 }
 .mathClickEntryButton{
     border: .2rem solid #337ab7;
-    padding-left: 15;
-    padding-right: 15;
+    padding-left: 15px;
+    padding-right: 15px;
     padding-top: 7px;
     padding-bottom: 5px;
     background: rgba(255, 255, 255, 0);
@@ -568,8 +568,8 @@ img.grayed-out-img {
 .answer-button{
     border-radius: 12rem;
     border: .2rem solid gray;
-    padding-left: 15;
-    padding-right: 15;
+    padding-left: 15px;
+    padding-right: 15px;
     padding-top: 9px;
     padding-bottom: 9px;
     margin: 1rem;
